# squish-mate

./: .gitignore  LICENSE  Modelfile  README.md  README.txt  TASKS.md  USAGE.md  desktop_pet.py  install.ps1  install.sh  package.json  pet_config.json  run_pet.py  run_pet.sh  squish-mate_split_plan.md
.claude/memory/: active-context.md  handoff.md
.github/: FUNDING.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llm_bridge.cpp  logging.h
android/app/src/main/java/com/preludeofme/squishmate/: MainActivity.kt  SquishMateApp.kt
android/app/src/main/java/com/preludeofme/squishmate/anim/: PetAnimator.kt  PetExpressions.kt
android/app/src/main/java/com/preludeofme/squishmate/bridge/: PetBridge.kt
android/app/src/main/java/com/preludeofme/squishmate/llm/: OnDeviceEngine.kt
android/app/src/main/java/com/preludeofme/squishmate/monitor/: DeviceEventMonitor.kt  UsageMonitor.kt
android/app/src/main/java/com/preludeofme/squishmate/overlay/: OverlayService.kt  PetView.kt  SpeechBubbleView.kt
android/app/src/main/java/com/preludeofme/squishmate/render/: BlobRenderer.kt
android/app/src/main/java/com/preludeofme/squishmate/settings/: MessageFrequency.kt  PetSettingsStore.kt  SettingsActivity.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/java/com/preludeofme/squishmate/anim/: PetAnimatorGoldenTest.kt
android/app/src/test/resources/: animator_golden.json
core/: bridge.py  llm_providers.py  pet_brain.py  pet_engine.py  pet_library.py  pet_memory.py  pet_performance.py  pyproject.toml
docs/: android_plan.md  architecture_refactor.md  play_store_declarations.md
monitors/: advanced_monitor.py  click_monitor.py  keystroke_monitor.py  screen_reader.py
scripts/: generate_animator_golden.py  make_sprite.py
tests/: test_bridge.py  test_integration.py  test_pet.py  test_pet_engine.py  test_pet_performance.py
ui/: blob_renderer.py  pet_animator.py  pet_debug.py  pet_expressions.py  pet_library_dialog.py  pet_responses.py  pet_settings.py  pet_transcript.py  pet_window.py
